Closes #88 Logging and Monitoring UI and sub-issues: closes #89, closes #90, closes #91, closes #92, closes #93, closes #94, closes #95.